[project]
name = "10-years-us-bond-rates-curve-dashboard"
version = "0.1.0"
description = "10 Years Bond Rates dashboard with dbnomics data"
authors = [
    { name = "Juliette.Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "streamlit>=1.37.0",
    "streamlit-option-menu>=0.3.13",
    "dbnomics>=1.2.5",
    "pandas>=2.2.2",
    "plotly-express>=0.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_10_years_us_bond_rates_curve_dashboard"]
